# wyoming-nemo-parakeet

./: .dockerignore  .gitignore  Dockerfile  MODULE.bazel  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/wyoming_nemo_parakeet/: BUILD.bazel  __main__.py  handler.py  main.py  requirements.in  requirements_lock.txt  requirements_xpu.in  requirements_xpu_lock.txt  xpu_available.py
src/wyoming_parakeet/: __main__.py  handler.py
