[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming-nemo-parakeet"
version = "0.1.0"
description = "Wyoming protocol server for NVIDIA NeMo Parakeet"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jonathan Woodbury", email = "jpwoodbu@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming",
    "nemo_toolkit[asr]",
]

[project.urls]
Homepage = "https://github.com/jpwoodbu/wyoming-nemo-parakeet"
